--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,16 @@ services:
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist/tO_dO_aPP
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache
+      - path: /*
+        name: X-Frame-Options
+        value: DENY
+      - path: /*
+        name: X-Content-Type-Options
+        value: nosniff
     routes:
       - type: rewrite
         source: /*
