--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: todo-app
     env: static
-    buildCommand: npm install && npm run build
+    buildCommand: npm install --legacy-peer-deps && npm run build
     staticPublishPath: ./dist/tO_dO_aPP
     headers:
       - path: /*
@@ -13,8 +13,4 @@ services:
         value: DENY
       - path: /*
         name: X-Content-Type-Options
-        value: nosniff
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html 
+        value: nosniff 
