--- a/render.yaml
+++ b/render.yaml
@@ -13,4 +13,8 @@ services:
         value: DENY
       - path: /*
         name: X-Content-Type-Options
-        value: nosniff 
+        value: nosniff
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: /index.html
